# devkit

./: Makefile  README.md  pyproject.toml
src/devkit/: __init__.py  config.py  main.py
src/devkit/commands/: sync.py
src/devkit/utils/: __init__.py  rich_utils.py  shell_utils.py
