[project]
name = "devkit"
version = "0.1.0"
description = "CLI tool for conveniences in local development."
readme = "README.md"
authors = [
    { name = "Joe Risner" }
]
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.9.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

#################
##### Tools #####
#################

[tool.ruff]
indent-width = 4
line-length = 120

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
indent-style = "space"
quote-style = "single"

[tool.ruff.lint]
# Pyflakes, pycodestyle, flake8-simplify, pyupgrade
select = ["F", "E", "SIM", "UP"]
